avoid overlap of loading indicator

--- a/app/client/web/src/content/Content.module.css
+++ b/app/client/web/src/content/Content.module.css
@@ -51,6 +51,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    padding-top: 32px;
   }
 
   .channels {
